# py-typer-group-prefix

./: .bumpversion.toml  pyproject.toml
.github/workflows/: release.yml
src/typer_group_prefix/: __init__.py
