[project]
name = "typer-group-prefix"
version = "0.1.0"
description = "Add Prefixes to Typer Groups"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kalle Aagaard", email = "git@k-moeller.dk"},
]
maintainers = [
    {name = "Kalle Aagaard", email = "git@k-moeller.dk"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/KalleDK/py-typer-group-prefix"
Documentation = "https://github.com/KalleDK/py-typer-group-prefix"
Repository = "https://github.com/KalleDK/py-typer-group-prefix.git"

[dependency-groups]
test = [
    "pytest>=8.4.2",
]
stubs = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typer_group_prefix"]

[tool.pyright]
include = ["src", "tests", "examples"]
typeCheckingMode = "strict"
exclude = ["**/__pycache__"]
pythonVersion = "3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
